assets/css/_services.scss
@import "tokens";

.service-circle {
  flex: none;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 50%;
  border: 4px solid;
  background-color: blue;
  transition-property: background-color, transform, left, top;
  transition-duration: 0.25s, 0.25s, 0.5s, 0.5s;
  transform: scale(0.33);

  @each $key, $val in $colors {
    &.is-#{"" + $key} {
      border-color: $val;
      background-color: $val;
    }
  }

  .service-carousel-indicator.is-active &, &.is-active {
    background-color: transparent;
    transform: scale(1)
  }

  .button-ghost & {
    position: relative;
    top: -0.1rem;
  }
}


.service-carousel-indicator {
  .service-carousel-hidable-text {
    transition-property: opacity;
    opacity: 0
  }

  &.is-active {
    .service-carousel-hidable-text {
      opacity: 1
    }
  }
}

.q-md-pt-7-5 {
  @media #{$query-md} {
    padding-top: 5rem;
  }
}

